--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "format": "prettier --write '**/*.{ts,tsx,js,jsx}'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
