--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,5 @@
     "ecmaVersion": 2020
   },
   "plugins": ["testing-library"],
-  "extends": ["eslint:recommended", "plugin:prettier/recommended"]
+  "extends": ["plugin:prettier/recommended"]
 }
