--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "eslint": "^8.14.0",
     "eslint-plugin-prettier": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -46,6 +47,7 @@
   },
   "devDependencies": {
     "@types/styled-components": "^5.1.25",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-testing-library": "^5.3.1",
     "prettier": "2.6.2"
   },
